--- a/app/assets/stylesheets/mtg_cards.css.sass
+++ b/app/assets/stylesheets/mtg_cards.css.sass
@@ -3,3 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .ruling .date
   font-weight: bold
+
+.card-text
+  background-color: #EEE
+  padding: 2px 6px
+
+.flavor
+  font-style: italic
