--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    .navbar.navbar-inverse{"role" => "navigation"}
+    .navbar.navbar{"role" => "navigation"}
       .container-fluid
         .navbar-header
           %button.navbar-toggle{:type => "button", "data-toggle" => "collapse", "data-target" => "#top-navbar"}
@@ -27,3 +27,5 @@
             %li= link_to "Sets", "/sets"
     .container-fluid
       = yield
+    = javascript_include_tag "instantclick", "data-no-instant" => true
+    <script data-no-instant>InstantClick.init();</script>
