--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html{"lang" => "en"}
+%html{"lang" => "en", "ng-app" => "mtgApp"}
   %head
     %meta{"charset" => "utf-8"}
     %meta{"http-equiv" => "X-UA-Compatible", "content" => "IE=edge"}
@@ -25,7 +25,6 @@
             %button.btn.btn-default{:type => "Submit"} Search
           %ul.nav.navbar-nav.navbar-right
             %li= link_to "Sets", "/sets"
-    .container-fluid
-      = yield
-    = javascript_include_tag "instantclick", "data-no-instant" => true
-    <script data-no-instant>InstantClick.init();</script>
+    .container-fluid{"ui-view" => true}
+      %noscript
+        = yield
