--- a/public/templates/sets/show.html
+++ b/public/templates/sets/show.html
@@ -1,1 +1,26 @@
 <h1>{{ mtg_set.name }}</h1>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Number</th>
+      <th>Name</th>
+      <th>Type</th>
+      <th>Mana</th>
+      <th>Rarity</th>
+      <th>Artist</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="card in mtg_set.cards">
+      <td><img ng-show="card.image_url" ng-src="{{card.image_url}}" height="30"></td>
+      <td>{{card.number}}</td>
+      <td><a ui-sref="sets.show.card({code: mtg_set.code, lang: 'en', number: card.number})">{{card.name}}</a></td>
+      <td>{{card.type_text}}</td>
+      <td>{{card.mana_cost}}</td>
+      <td>{{card.rarity}}</td>
+      <td>{{card.artist}}</td>
+    </tr>
+  </tbody>
+</table>
