Replace bootstrap with foundation

--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -1,12 +1,12 @@
-.row
-  .col-md-4
-    - if @card.previous_card
+%ul
+  - if @card.previous_card
+    %li
       ←
       = link_to @card.previous_card.name, @card.previous_card.url
-  .col-md-4
+  %li
     = link_to @card.set_name, @card.set_url
-  .col-md-4
-    - if @card.next_card
-      = link_to @card.next_card.name , @card.previous_card.url
+  - if @card.next_card
+    %li
+      = link_to @card.next_card.name , @card.next_card.url
       →
 = render :partial => 'card', :object => @card
