--- a/public/templates/sets/card.html
+++ b/public/templates/sets/card.html
@@ -1,16 +1,16 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="columns small-4">
     <div ng-show="card.previous_card">
       ←
       <a ui-sref="sets.show.card({code: card.set.code, lang: 'en', number: card.previous_card.number})">{{card.previous_card.name}}</a>
     </div>
   </div>
 
-  <div class="col-md-4">
+  <div class="columns small-4">
     <a ui-sref="sets.show({code: card.set.code, lang: 'en'})">{{card.set.name}}</a>
   </div>
 
-  <div class="col-md-4">
+  <div class="columns small-4">
     <div ng-show="card.next_card">
       <a ui-sref="sets.show.card({code: card.set.code, lang: 'en', number: card.next_card.number})">{{card.next_card.name}}</a>
       →
@@ -19,10 +19,10 @@
 </div>
 
 <div class='row'>
-  <div class='col-md-3'>
-    <img ng-src="{{card.image_url}}" width='320'>
+  <div class='columns medium-4'>
+    <img ng-src="{{card.image_url}}">
   </div>
-  <div class='col-md-6'>
+  <div class='columns medium-6'>
     <h1><a ui-sref="sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a></h1>
     <p>{{card.type_text}}, {{card.mana_cost}} ({{card.cmc}})</p>
     <p class='card_text'>{{card.text}}</p>
@@ -44,7 +44,7 @@
       </ul>
     </div>
   </div>
-  <div class='col-md-3'>
+  <div class='columns medium-2'>
     <h3>Printings</h3>
     <ul class="printings">
       <li ng-repeat="printing in card.printings">
