--- a/app/views/cards/_card.html.haml
+++ b/app/views/cards/_card.html.haml
@@ -1,24 +1,23 @@
-.row
-  .col-md-3
-    %img{:src => card.image_url, :width => 320}
-  .col-md-6
-    %h1= link_to card.name, card.url
-    %p= "#{card.type_text}, #{card.mana_cost} (#{card.cmc})"
-    %p.card_text= card.text
-    %p.flavor= card.flavor
-    %p.artist
-      Illus.
-      = card.artist
-    .rulings
-      %h3
-        Gatherer Card Rulings
-        %span.hint= link_to "?", card.multiverse_url
-      %ul
-        - card.rulings.each do |ruling|
-          %li.ruling
-            %span.date #{ruling.date}:
-            = ruling.text
-  .col-md-3
+%div
+  %img{:src => card.image_url, :width => 320}
+%div
+  %h1= link_to card.name, card.url
+  %p= "#{card.type_text}, #{card.mana_cost} (#{card.cmc})"
+  %p= card.text
+  %p= card.flavor
+  %p
+    Illus.
+    = card.artist
+  %div
+    %h3
+      Gatherer Card Rulings
+      %span= link_to "?", card.multiverse_url
+    %ul
+      - card.rulings.each do |ruling|
+        %li
+          %span #{ruling.date}:
+          = ruling.text
+  %div
     %h3 Printings
     %ul
       - card.printings.each do |other_card|
