--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,1 +1,19 @@
 @import "foundation_and_overrides"
+@import "mtg_cards"
+@import "sets"
+
+body
+  background-color: #f0f0f0
+a
+  text-decoration: underline
+.footer
+  @extend .row
+  border-top: 1px solid #ccc
+  margin-top: 10px
+  padding: 10px 0
+  .copyright
+    @extend .columns
+    p
+      margin-bottom: 0
+      font-size: 0.7rem
+      color: #666
