--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,3 +25,11 @@
     %div{"ui-view" => true}
     %noscript
       = yield
+    .footer
+      .copyright
+        %p
+          The information presented on this site about Magic: The Gathering,
+          both literal and graphical, is copyrighted by Wizards of the Coast.
+        %p
+          This website is not produced, endorsed, supported, or affiliated with
+          Wizards of the Coast.
