--- a/public/templates/sets/show.html
+++ b/public/templates/sets/show.html
@@ -1,4 +1,4 @@
-<h1>{{ mtg_set.name }}</h1>
+<h1><img ng-show="mtg_set.icon" ng-src="{{ mtg_set.icon }}" width=32 class="icon" />{{ mtg_set.name }}</h1>
 
 <table>
   <thead>
