--- a/public/templates/sets/card.html
+++ b/public/templates/sets/card.html
@@ -49,7 +49,7 @@
         <span class='hint'><a href="http://www.wizards.com/Magic/TCG/Resources.aspx?x=judge/resources/banned">?</a></span>
       </h4>
     </div>
-    <p ng-show="card.multiverse_id"><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid={{ card.multiverse_id }}">{{ card.name }} on Gatherer</a></p>
+    <p ng-show="card.multiverse_id"><a ng-href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid={{ card.multiverse_id }}">{{ card.name }} on Gatherer</a></p>
   </div>
   <div class='related'>
     <h3>Printings</h3>
