--- a/public/templates/sets/index.html
+++ b/public/templates/sets/index.html
@@ -15,7 +15,7 @@
         <img ng-show="mtg_set.icon" ng-src="{{ mtg_set.icon }}" width=16 />
       </td>
       <td class='name'>
-        <a ui-sref="sets.show({code: mtg_set.code, lang: 'en'})">
+        <a ui-sref="mtg.sets.show({code: mtg_set.code, lang: 'en'})">
           {{ mtg_set.name }}
         </a>
       </td>
