--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,6 +6,17 @@ body
   background-color: #f0f0f0
 a
   text-decoration: underline
+.search-form
+  padding: 10px
+  input.omnibar
+    width: 100%
+    font-size: 16px
+    padding: 4px
+.search-results
+  .card
+    border-bottom: 2px solid #333
+    padding-bottom: 10px
+    margin-bottom: 10px
 .footer
   @extend .row
   border-top: 1px solid #ccc
