--- a/public/templates/search/form.html
+++ b/public/templates/search/form.html
@@ -1,3 +1,3 @@
 <form ng-submit="search()">
-  <input class="form-control" placeholder="Search..." ng-model="searchTerm">
+  <input class="form-control omnibar" placeholder="Search..." ng-model="searchTerm">
 </form>
