--- a/public/templates/search/index.html
+++ b/public/templates/search/index.html
@@ -1,40 +1,42 @@
-<div ng-repeat="card in cards" class="card">
-  <div class='image'>
-    <img ng-src="{{card.image_url}}">
-  </div>
-  <div class='details'>
-    <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a></h1>
-    <p>{{card.type_text}}, {{card.mana_cost}} ({{card.cmc}})</p>
-    <p class='card_text'>{{card.text}}</p>
-    <p class='flavor'>{{card.flavor}}</p>
-    <p class='artist'>
+<div class="search-results">
+  <div ng-repeat="card in cards" class="card">
+    <div class='image'>
+      <img ng-src="{{card.image_url}}">
+    </div>
+    <div class='details'>
+      <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a></h1>
+      <p>{{card.type_text}}, {{card.mana_cost}} ({{card.cmc}})</p>
+      <p class='card_text'>{{card.text}}</p>
+      <p class='flavor'>{{card.flavor}}</p>
+      <p class='artist'>
       Illus.
       {{card.artist}}
-    </p>
-    <div class='legality'>
-      <h4>
-        Legality
-        <span class='hint'><a href="http://www.wizards.com/Magic/TCG/Resources.aspx?x=judge/resources/banned">?</a></span>
-      </h4>
+      </p>
+      <div class='legality'>
+        <h4>
+          Legality
+          <span class='hint'><a href="http://www.wizards.com/Magic/TCG/Resources.aspx?x=judge/resources/banned">?</a></span>
+        </h4>
+      </div>
     </div>
-  </div>
-  <div class='related'>
-    <h3>Printings</h3>
-    <ul class="printings">
-      <li ng-repeat="printing in card.printings">
+    <div class='related'>
+      <h3>Printings</h3>
+      <ul class="printings">
+        <li ng-repeat="printing in card.printings">
         <div>
           <a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: printing.number})">#{{printing.number}} ({{printing.artist}})</a>
         </div>
-      </li>
-    </ul>
-    <h3>Editions</h3>
-    <ul class="editions">
-      <li ng-repeat="edition in card.editions">
+        </li>
+      </ul>
+      <h3>Editions</h3>
+      <ul class="editions">
+        <li ng-repeat="edition in card.editions">
         <span>
           <img ng-src="{{ edition.set.icon }}" width=16 />
           <a ui-sref="mtg.sets.show.card({code: edition.set.code, lang: 'en', number: edition.number})">{{edition.set.name}}</a>
         </span>
-      </li>
-    </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
