Work on small screen set css

--- a/public/templates/sets/index.html
+++ b/public/templates/sets/index.html
@@ -1,28 +1,14 @@
-<table class='mtg_sets'>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Name</th>
-      <th>Code</th>
-      <th>Release Type</th>
-      <th>Release Date</th>
-      <th>Block</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class='mtg_set' ng-repeat='mtg_set in mtg_sets'>
-      <td class='icon'>
-        <img ng-show="mtg_set.icon" ng-src="{{ mtg_set.icon }}" width=16 />
-      </td>
-      <td class='name'>
-        <a ui-sref="mtg.sets.show({code: mtg_set.code, lang: 'en'})">
-          {{ mtg_set.name }}
-        </a>
-      </td>
-      <td class='code'>{{ mtg_set.code }}</td>
-      <td class='release_type'>{{ mtg_set.release_type }}</td>
-      <td class='release_date'>{{ mtg_set.release_date }}</td>
-      <td class='block'>{{ mtg_set.block }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="mtg-sets">
+
+  <ul>
+    <li ng-repeat='mtg_set in mtg_sets' ng-click="mtg.sets.show({code: mtg_set.code, lang: 'en'})">
+      <a ui-sref="mtg.sets.show({code: mtg_set.code, lang: 'en'})">
+        <div class="icon" ng-show="mtg_set.icon"><img ng-src="{{ mtg_set.icon }}" width=16
+          /></div><div class="name">{{ mtg_set.name }}</div>
+        <div class='code'>{{ mtg_set.code }}</div>
+        <div class='release-type'><label>Type:</label> {{ mtg_set.release_type }}</div>
+        <div class='release-date'><label>Released:</label> {{ mtg_set.release_date }}</div>
+      </a>
+    </li>
+  </ul>
+</div>
