--- a/public/templates/sets/card.html
+++ b/public/templates/sets/card.html
@@ -25,8 +25,8 @@
     <img ng-src="{{card.image_url}}">
   </div>
   <div class='details'>
-    <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a></h1>
-    <p>{{card.type_text}}, {{card.mana_cost}} ({{card.cmc}})</p>
+    <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a> ({{card.printing_id}})</h1>
+    <p>{{card.type_text}}<span ng-show="card.mana_cost">, {{card.mana_cost}}</span> <span ng-show="card.cmc">({{card.cmc}})</span></p>
     <p class='card_text'>{{card.text}}</p>
     <p class='flavor'>{{card.flavor}}</p>
     <p class='artist'>
@@ -54,6 +54,14 @@
     <p ng-show="card.multiverse_id"><a ng-href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid={{ card.multiverse_id }}">{{ card.name }} on Gatherer</a></p>
   </div>
   <div class='related'>
+    <div ng-show="card.other_part" class="other-part">
+      <h3>Other Part</h3>
+      <ul>
+        <li>
+        <a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.other_part.number})">#{{card.other_part.number}} {{card.other_part.name}}</a>
+        </li>
+      </ul>
+    </div>
     <h3>Printings</h3>
     <ul class="printings">
       <li ng-repeat="printing in card.printings">
