Remove printing id from template

--- a/public/templates/sets/card.html
+++ b/public/templates/sets/card.html
@@ -25,7 +25,7 @@
     <img ng-src="{{card.image_url}}">
   </div>
   <div class='details'>
-    <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a> ({{card.printing_id}})</h1>
+    <h1><a ui-sref="mtg.sets.show.card({code: card.set.code, lang: 'en', number: card.number})">{{card.name}}</a></h1>
     <p>{{card.type_text}}<span ng-show="card.mana_cost">, {{card.mana_cost}}</span> <span ng-show="card.cmc">({{card.cmc}})</span></p>
     <p class='card_text'>{{card.text}}</p>
     <p class='flavor'>{{card.flavor}}</p>
