Add price and volume data graphs

--- a/public/templates/sets/card.html
+++ b/public/templates/sets/card.html
@@ -90,3 +90,6 @@
     </ul>
   </div>
 </div>
+<div class="row">
+  <div id="price-data" class="columns small-12" style="width: 100%"></div>
+</div>
