Add market price view

--- a/app/assets/stylesheets/mtg_cards.css.sass
+++ b/app/assets/stylesheets/mtg_cards.css.sass
@@ -53,6 +53,22 @@
       font-weight: bold
     .ruling, .legality
       font-size: 0.8rem
+  .market_price
+    font-family: monospace
+    .min, .median, .high
+      float: left
+      margin: 2px
+      padding: 2px
+    label, price
+      display: inline
+    .min
+      background-color: pink
+    .median
+      background-color: skyblue
+    .high
+      background-color: limegreen
+    price
+      font-weight: bold
 #price-data
   input
     width: auto
