--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,6 +12,14 @@ a
     width: 100%
     font-size: 16px
     padding: 4px
+  .button
+    font-size: 16px
+    padding: 4px
+    height: auto
+    line-height: normal
+    margin-top: 3px
+  .help-col
+    padding-left: 4px !important
 .search-results
   .card
     border-bottom: 2px solid #333
