Clarify what is supported

--- a/public/templates/search/form.html
+++ b/public/templates/search/form.html
@@ -19,7 +19,6 @@
     <dd><a ui-sref="mtg.search({q: 'o:Flying'})"o:Flying</a></dd>
     <dd><a ui-sref="mtg.search({q: 'o:&quot;First strike&quot;'})">o:"First strike"</a></dd>
     <dd><a ui-sref="mtg.search({q: 'o:{T} o:&quot;add+one+mana+of+any+color&quot;'})">o:{T} o:"add one mana of any color"</a></dd>
-    <dd><a ui-sref="mtg.search({q: 'o:&quot;whenever ~ deals combat damage&quot;'})">o:"whenever ~ deals combat damage"</a></dd>
 
     <dt><u>T</u>ypes (Oracle):</dt>
     <dd><a ui-sref="mtg.search({q: 't:angel'})">t:angel</a></dd>
@@ -36,7 +35,8 @@
     <dd><a ui-sref="mtg.search({q: 'c!wum'})">c!wum</a> (Cards that are only white and blue, and multicolored)</dd>
     <dd><a ui-sref="mtg.search({q: 'c!wubrgm'})">c!wubrgm</a> (Cards that are all five colors)</dd>
     <dd><a ui-sref="mtg.search({q: 'c:m'})">c:m</a> (Any multicolored card)</dd>
-    <dd><a ui-sref="mtg.search({q: 'c:l or c:c'})">c:l or c:c</a> (Lands and colorless cards)</dd>
+    <dd><a ui-sref="mtg.search({q: 'c:l'})">c:l</a> (Land cards)</dd>
+    <dd><a ui-sref="mtg.search({q: 'c:c'})">c:c</a> (Colorless cards)</dd>
 
     <dt><u>Mana</u> Cost:</dt>
     <dd><a ui-sref="mtg.search({q: 'mana%3D3G'})">mana=3G</a> (Spells that cost exactly 3G, or split cards that can be cast with 3G)</dd>
